# pavai-workspace

./: .gitignore  Dockerfile  LICENSE  README.md  env.shared  first_time_setup.sh  pyproject.toml  requirements.txt  start.sh  start_fastapi.sh  start_gradio.sh
development/: crewai_interpreter.py  newsapi.py  semantic_chuks.py
docs/: notes.txt
genai_at_work/: chatbot_ui.py  chatbotllm.py  chatllamacpp.py  chatollama.py  chatopenai.py  chatrestful.py  chatwithhistory.py  config.py  download.py  filedata.py  genaiapp.py  genaiworkspace.py  historydata.py  llamacpp.py  mediadata.py  multilingual.py  scratchpad_ui.py  summarizer.py  summarizer_ui.py  system_setup.py  system_types.py  translator.py  translator_ui.py  webdata.py  websearch.py  websearch_ui.py  workspace.py  workspace_fastapi.py
genai_at_work/_delete/: chatbotv3.old
historydb/: chroma.sqlite3
infrastucture/: local_install.sh  ollama_install.sh
resources/config/: llm_defaults.json
samples/: LLM_VUI.docx  Offline Reading.html  demo.txt
tests/: test_load_model.py
