[tool.poetry]
name = "genaiatwork"
version = "0.1.0"
description = "Private productivity-focused AI workspace crafted for daily use, characterized by simplicity, minimalism, and effortlessly integrated multilingual communication assistance catering to professionals' needs."
authors = ["minyang chen <mychen76@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "genai_at_work"}]

[tool.poetry.dependencies]
python = "~3.11,<3.12"
openai = "^1.12.0"
gradio = "^4.19.1"
ollama = "^0.1.6"
tiktoken = "0.5.2"
html2text = "^2020.1.16"
selenium = "^4.18.1"
newspaper3k = "^0.2.8"
textstat = "^0.7.3"
duckduckgo-search = "^4.4.3"
transformers = "^4.37.2"
torch = {version = "^2.1.2+cu118", source = "pytorch"}
torchvision = {version = "^0.16.2+cu118", source = "pytorch"}
torchaudio = {version = "^2.1.2+cu118", source = "pytorch"}
faster-whisper = "^0.10.0"
pytube = "^15.0.0"
pydub = "^0.25.1"
accelerate = "^0.27.2"
optimum = "^1.17.1"
chromadb = "^0.4.22"
markdown = "^3.5.2"
docx2txt = "^0.8"
bs4 = "^0.0.2"
pymupdf = "^1.23.24"
loguru = "^0.7.2"
async-timeout = "^4.0.3"
huggingface-hub = "^0.20.3"
sentence-transformers = "^2.3.1"
python-dotenv = "^1.0.1"
llama-cpp-python = "0.2.27"
termcolor = "^2.4.0"
chatlab = "^1.3.0"
jsonref = "^1.1.0"
newsapi-python = "^0.2.7"
textsum = "^0.2.1"
python-doctr = "^0.7.0"
pyspellchecker = "^0.8.1"
youtube-transcript-api = "^0.6.2"
crewai = "^0.14.3"
open-interpreter = "^0.2.0"
sgmllib3k = "^1.0.0"
sniffio = "^1.3.0"
yahoo-finance = "^1.4.0"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.11"
black = "^23.12.1"
faker = "^22.4.0"
ipykernel = "^6.29.0"
pylint = "^3.0.3"
isort = "^5.13.2"
jupyterlab-code-formatter = "^2.2.1"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

# [[tool.poetry.source]]
# name = "torch"
# url = "https://download.pytorch.org/whl/cu121"
# priority = "supplemental"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
